  * apport/ui.py, load_report(): Produce proper error message if
    executable/interpreter path do not exist any more. (LP: #186684)
  * cli/apport-cli: Intercept SIGPIPE when calling sensible-pager, to avoid
    crash when quitting it prematurely. (LP: #153872)
  * bin/apport-checkreports: Print out a list of program names/packages which
    have a pending crash report. (LP: #145117)

  [ Daniel Hahler ]
  * .crash file integration for KDE3 (LP: #177055)
    - debian/apport-qt.install: install added files qt4/apport-qt-mime.desktop
      and qt4/apport-qt-mimelnk.desktop
  * Fixed minor warnings/errors from desktop-file-validate in
    gtk/apport-gtk-mime.desktop.in and qt4/apport-qt.desktop.in (LP: #146957)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 06 Feb 2008 11:16:14 +0100

apport (0.101) hardy; urgency=low

  * debian/control: Add python-xdg dependency to apport, since apport-cli
    needs it. (LP: #177095)
  * apport/ui.py: Add test case for reporting a report which has been
    preprocessed by apport-retrace, i. e. has a stack trace, but no core dump
    any more (reproducing LP #185084).
  * apport/ui.py, run_crash(): Do not reject reports which have a stack trace,
    but no core dump. (LP: #185084)
  * apport/report.py: Fix test_add_gdb_info_load() test case, the temporary
    executable was already deleted when gdb ran the second time.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 23 Jan 2008 17:48:06 +0000

apport (0.100) hardy; urgency=low

  * bin/crash-digger: Add option --log for logging to a file, and
    --pidfile/--stop for daemonization. Add test cases to test-crash-digger.
  * bin/apport: Do not re-raise exceptions about failure to create the lock
    file, to avoid crashing in the case that another apport instance tries to
    lock at exactly the same moment. (LP: #147237)
  * apport/report.py testsuite: Check that our methods get along with binary
    data which turn into CompressedValue objects after loading them from a