@@ -24,6 +24,10 @@ apport (0.102) UNRELEASED; urgency=low
     crash when quitting it prematurely. (LP: #153872)
   * bin/apport-checkreports: Print out a list of program names/packages which
     have a pending crash report. (LP: #145117)
+  * apport/ui.py, run_argv(): Add return code which indicates whether any
+    report has been processed.
+  * cli/apport-cli: If no pending crash reports are present, say so and refer
+    to --help. (LP: #182985)
 
   [ Daniel Hahler ]
   * .crash file integration for KDE3 (LP: #177055)
@@ -32,7 +36,7 @@ apport (0.102) UNRELEASED; urgency=low
   * Fixed minor warnings/errors from desktop-file-validate in
     gtk/apport-gtk-mime.desktop.in and qt4/apport-qt.desktop.in (LP: #146957)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 06 Feb 2008 11:16:14 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 06 Feb 2008 12:30:03 +0100
 
 apport (0.101) hardy; urgency=low
 
